[gd_scene load_steps=7 format=3 uid="uid://dme2eq84nbrnq"]

[ext_resource type="PackedScene" uid="uid://dqog4ebqwf6ud" path="res://addons/skein/nodes/BaseNode.tscn" id="1"]
[ext_resource type="Script" uid="uid://by8h8jgk04joo" path="res://addons/skein/nodes/DialogNode.gd" id="3"]
[ext_resource type="Script" uid="uid://ctn1klftgdba" path="res://addons/skein/nodes/Choice.gd" id="4"]
[ext_resource type="Script" uid="uid://teejkw4sgyv8" path="res://addons/skein/nodes/common/TextEdit.gd" id="4_3h4dg"]

[sub_resource type="Image" id="Image_lrfnw"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 180, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 168, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 168, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 19, 223, 223, 223, 234, 223, 223, 223, 234, 214, 214, 214, 19, 214, 214, 214, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 221, 221, 221, 84, 221, 221, 221, 84, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="7"]
image = SubResource("Image_lrfnw")

[node name="1" instance=ExtResource("1")]
slot/0/left_enabled = true
slot/0/right_enabled = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 0.270588, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(0, 1, 0, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 0, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("3")

[node name="Panel" parent="Body/Toolbar/Seperator" index="0"]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Title" parent="Body/Toolbar" index="2"]
text = "Dialog"

[node name="Edit" parent="Body/Toolbar" index="4"]
item_count = 1
popup/item_0/text = "Choices"
popup/item_0/checkable = 1
popup/item_0/id = 0

[node name="TextEdit" type="TextEdit" parent="Body" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
deselect_on_focus_loss_enabled = false
wrap_mode = 1
highlight_all_occurrences = true
draw_tabs = true
draw_spaces = true
script = ExtResource("4_3h4dg")

[node name="Choice1" type="HBoxContainer" parent="." index="2"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="Choice" type="LineEdit" parent="Choice1" index="0"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Option"

[node name="Condition" type="LineEdit" parent="Choice1" index="1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Condition"

[node name="Menu" type="MenuButton" parent="Choice1" index="2"]
visible = false
layout_mode = 2
focus_mode = 2
text = "1"
icon = SubResource("7")

[node name="Label" type="Label" parent="Choice1" index="3"]
layout_mode = 2
text = "1"

[node name="Choice2" type="HBoxContainer" parent="." index="3"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="Choice" type="LineEdit" parent="Choice2" index="0"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Option"

[node name="Condition" type="LineEdit" parent="Choice2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Condition"

[node name="Menu" type="MenuButton" parent="Choice2" index="2"]
visible = false
layout_mode = 2
focus_mode = 2
text = "2"
icon = SubResource("7")

[node name="Label" type="Label" parent="Choice2" index="3"]
layout_mode = 2
text = "2"

[node name="Choice3" type="HBoxContainer" parent="." index="4"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="Choice" type="LineEdit" parent="Choice3" index="0"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Option"

[node name="Condition" type="LineEdit" parent="Choice3" index="1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Condition"

[node name="Menu" type="MenuButton" parent="Choice3" index="2"]
visible = false
layout_mode = 2
focus_mode = 2
text = "3"
icon = SubResource("7")

[node name="Label" type="Label" parent="Choice3" index="3"]
layout_mode = 2
text = "3"

[node name="Choice4" type="HBoxContainer" parent="." index="5"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="Choice" type="LineEdit" parent="Choice4" index="0"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Option"

[node name="Condition" type="LineEdit" parent="Choice4" index="1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Condition"

[node name="Menu" type="MenuButton" parent="Choice4" index="2"]
visible = false
layout_mode = 2
focus_mode = 2
text = "4"
icon = SubResource("7")

[node name="Label" type="Label" parent="Choice4" index="3"]
layout_mode = 2
text = "4"

[node name="Control" type="Control" parent="." index="6"]
layout_mode = 2
